chore: update db config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
   pg:
     image: bitnami/postgresql
     ports:
-      - 5433:5433
+      - 5432:5432
     environment:
       - POSTGRESQL_USERNAME=docker
-      - POSTGRESQL_PASSWORD=docker@123
+      - POSTGRESQL_PASSWORD=docker123
       - POSTGRESQL_DATABASE=books
     volumes:
       - pg_data:/var/lib/pg/data
