--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - 5432:5432
     environment:
       - POSTGRESQL_USERNAME=docker
-      - POSTGRESQL_PASSWORD=docker123
+      - POSTGRESQL_PASSWORD=123
       - POSTGRESQL_DATABASE=books
     volumes:
       - pg_data:/var/lib/pg/data
